[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/rhythm/RhythmBox.gd" type="Script" id=1]
[ext_resource path="res://assets/rhythm/rhythmbox.png" type="Texture" id=2]
[ext_resource path="res://scenes/rhythm/BeatSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/rhythm/chord_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/rhythm/chord_pressed_ok.png" type="Texture" id=5]
[ext_resource path="res://assets/rhythm/no_hit_chord.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/rhythm/hit_chord_beat.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/rhythm/missed_chord_beat.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/rhythm/song.ogg" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 40.2922, 10.2957 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 34.8184, 10 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 37.2668, 10 )

[sub_resource type="Animation" id=2]

resource_name = "missed_beat"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -6.33977, 3.90137 ), Vector2( 3.41368, 6.82739 ), Vector2( -5.36443, 0.487671 ), Vector2( -1.46306, 3.9014 ), Vector2( 0, 0 ) ]
}

[node name="RhythmBox" type="Node2D"]

pause_mode = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Pause", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Beats" type="Node2D" parent="Sprite" index="0"]

_sections_unfolded = [ "Pause" ]

[node name="BeatSpawner" parent="Sprite/Beats" index="0" instance=ExtResource( 3 )]

position = Vector2( 137, 0 )
_sections_unfolded = [ "Pause" ]

[node name="BeatSpawner2" parent="Sprite/Beats" index="1" instance=ExtResource( 3 )]

position = Vector2( 302, 0 )
one_chance_on = 3
tick_time = 0.75

[node name="BeatSpawner3" parent="Sprite/Beats" index="2" instance=ExtResource( 3 )]

position = Vector2( 466, 0 )
one_chance_on = 4
tick_time = 0.5

[node name="Chords" type="Node2D" parent="Sprite" index="1"]

[node name="Chord0" type="Area2D" parent="Sprite/Chords" index="0"]

position = Vector2( 112.987, 309.783 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="Shape" type="CollisionShape2D" parent="Sprite/Chords/Chord0" index="0"]

position = Vector2( 18, 10 )
shape = SubResource( 3 )

[node name="Pressed_KO" type="Sprite" parent="Sprite/Chords/Chord0" index="1"]

visible = false
position = Vector2( 18, 11 )
texture = ExtResource( 4 )

[node name="Pressed_OK" type="Sprite" parent="Sprite/Chords/Chord0" index="2"]

visible = false
position = Vector2( 18, 11 )
texture = ExtResource( 5 )

[node name="Chord1" type="Area2D" parent="Sprite/Chords" index="1"]

position = Vector2( 281.987, 309.783 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="Shape" type="CollisionShape2D" parent="Sprite/Chords/Chord1" index="0"]

position = Vector2( 16, 10 )
shape = SubResource( 4 )

[node name="Pressed_KO" type="Sprite" parent="Sprite/Chords/Chord1" index="1"]

visible = false
position = Vector2( 16, 10 )
texture = ExtResource( 4 )

[node name="Pressed_OK" type="Sprite" parent="Sprite/Chords/Chord1" index="2"]

visible = false
position = Vector2( 16, 10 )
texture = ExtResource( 5 )

[node name="Chord2" type="Area2D" parent="Sprite/Chords" index="2"]

position = Vector2( 456.987, 309.783 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="Shape" type="CollisionShape2D" parent="Sprite/Chords/Chord2" index="0"]

position = Vector2( 8, 10 )
shape = SubResource( 5 )

[node name="Pressed_KO" type="Sprite" parent="Sprite/Chords/Chord2" index="1"]

visible = false
position = Vector2( 8, 10 )
texture = ExtResource( 4 )

[node name="Pressed_OK" type="Sprite" parent="Sprite/Chords/Chord2" index="2"]

visible = false
position = Vector2( 8, 10 )
texture = ExtResource( 5 )

[node name="NoHitChord" type="AudioStreamPlayer" parent="Sprite/Chords" index="3"]

stream = ExtResource( 6 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="HitChordBeat" type="AudioStreamPlayer" parent="Sprite/Chords" index="4"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="MissedChordBeat" type="AudioStreamPlayer" parent="Sprite/Chords" index="5"]

stream = ExtResource( 8 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Music" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 9 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/missed_beat = SubResource( 2 )
blend_times = [  ]


